--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 cvzone==1.5.3
 cycler==0.11.0
+evdev==1.4.0
 flatbuffers==2.0
 fonttools==4.28.1
 gast==0.4.0
@@ -24,6 +25,7 @@ libclang==12.0.0
 Markdown==3.3.5
 matplotlib==3.5.0
 mediapipe==0.8.9
+MouseInfo==0.1.3
 numpy==1.21.4
 oauthlib==3.1.1
 opencv-contrib-python==4.5.4.58
@@ -34,8 +36,18 @@ Pillow==8.4.0
 protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pynput==1.7.6
 pyparsing==2.4.7
+pyperclip==1.8.2
+PyRect==0.1.4
+PyScreeze==0.1.28
 python-dateutil==2.8.2
+python-xlib==0.31
+python3-xlib==0.15
+pytweening==1.0.4
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
